--- a/server/dockerconfs/Dockerfile-common
+++ b/server/dockerconfs/Dockerfile-common
@@ -24,6 +24,8 @@ WORKDIR /var/www/django/codedog
 COPY . .
 
 RUN mkdir -p log/ && \
+    pip install -i https://pypi.tuna.tsinghua.edu.cn/simple pip -U && \
+    pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple && \
     pip install -U setuptools pip && \
     pip install -r requirements.txt
     
